src/snapshots/tptp__fof__tests__fof_sequent.snap
---
source: src/fof.rs
expression: parsed
snapshot_kind: text
---
LogicSequent {
    left: ListFormula(
        [],
    ),
    right: ListFormula(
        [],
    ),
}
